--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 <meta name="mobile-web-app-capable" content="yes">
 <style>
 <style>
-canvas{border:1px solid;}
+canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80%;
+}
+#color, #size {
+    position: absolute;
+    bottom: 0;
+}
 </style>
 </head>
 <body
-style="height:80%;width:100%;margin:0;padding:0;overflow:hidden">
+style="height:100%;width:100%;margin:0;padding:0;overflow:hidden">
 <canvas id="canvas"></canvas>
 <br>
 <input type="color" id="color" value="#000000">
