--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <style>
 canvas{
     position: absolute;
-    top: 0;
+    bottom: 30px;
     left: 0;
     width: 100%;
-    height: 80%;
+    height: calc(100% - 30px);
 }
 #color, #size {
     position: absolute;
