--- a/index.html
+++ b/index.html
@@ -1,74 +1,52 @@
 <!DOCTYPE html>
 <html manifest="manifest.json">
 <head>
-<title>Canvas Drawing</title>
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-<link rel="apple-touch-icon" href="icon.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="mobile-web-app-capable" content="yes">
-<style>
-#options {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: lightgray;
-    padding: 10px;
-    box-sizing: border-box;
-}
-canvas {
-    position: absolute;
-    top: 50px;
-    left: 0;
-    width: 100%;
-    bottom: 0;
-}
-</style>
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <style>
+    canvas{width:100vw;height:calc(100vh - 50px);}
+    #panel{position:absolute;top:0;left:0;width:100%;height:50px;background-color:#F5F5F5;}
+    #panel select,#panel input[type=color]{margin:10px;}
+  </style>
 </head>
-<body style="height:100%;width:100%;margin:0;padding:0">
-<div id="options">
-    <input type="color" id="color" value="#000000">
-    <input type="range" id="size" min="1" max="50" value="10">
-</div>
-<canvas id="canvas"></canvas>
-<br>
-<input type="color" id="color" value="#000000">
-<input type="range" id="size" min="1" max="50" value="10">
-<script>
-if('serviceWorker' in navigator)navigator.serviceWorker.register('sw.js');
-var canvas=document.getElementById('canvas'),c=canvas.getContext('2d'),color=document.getElementById('color'),size=document.getElementById('size'),draw=false,touchPoints = [];
-canvas.width=innerWidth;canvas.height=innerHeight;
-c.lineCap='round';c.lineJoin='round';
-color.onchange=function(){c.strokeStyle=color.value};
-size.onchange=function(){c.lineWidth=size.value};
-//Add multitouch support
-canvas.addEventListener("touchstart", function(e){
-e.preventDefault();
-touchPoints = e.touches;
-for(var i = 0; i < touchPoints.length; i++){
-c.beginPath();
-c.moveTo(touchPoints[i].clientX, touchPoints[i].clientY);
-}
-}, false);
-
-canvas.addEventListener("touchmove", function(e){
-e.preventDefault();
-touchPoints = e.touches;
-for(var i = 0; i < touchPoints.length; i++){
-c.lineTo(touchPoints[i].clientX, touchPoints[i].clientY);
-c.stroke();
-}
-}, false);
-
-canvas.addEventListener("touchend", function(e){
-e.preventDefault();
-touchPoints = [];
-}, false);
-
-//Mouse events for non-touch devices
-canvas.onmousedown=function(e){draw=true;c.beginPath();c.moveTo(e.clientX,e.clientY)};
-canvas.onmousemove=function(e){if(draw)c.lineTo(e.clientX,e.clientY);c.stroke()};
-canvas.onmouseup=function(){draw=false};
-</script>
+<body>
+  <div id="panel">
+    <select id="brush-size">
+      <option value="2">2px</option>
+      <option value="5">5px</option>
+      <option value="10" selected>10px</option>
+      <option value="15">15px</option>
+      <option value="20">20px</option>
+    </select>
+    <input type="color" id="brush-color" value="#000000">
+  </div>
+  <canvas id="canvas"></canvas>
+  <script>
+    var c=document.getElementById("canvas"),ctx=c.getContext("2d"),size=10,color='black';
+    c.width=innerWidth;c.height=innerHeight-50;
+    document.getElementById("brush-size").addEventListener("change", function(e){size=e.target.value;});
+    document.getElementById("brush-color").addEventListener("change", function(e){color=e.target.value;});
+    c.addEventListener("touchmove",function(e){
+      e.preventDefault();
+      var x=e.targetTouches[0].pageX,y=e.targetTouches[0].pageY;
+      ctx.fillStyle=color;
+      ctx.beginPath();
+      ctx.arc(x,y-50,size,0,2*Math.PI);
+      ctx.fill();
+    },false);
+    c.addEventListener("mousemove",function(e){
+      var x=e.clientX,y=e.clientY;
+      ctx.fillStyle=color;
+      ctx.beginPath();
+      ctx.arc(x,y-50,size,0,2*Math.PI);
+      ctx.fill();
+    },false);
+    window.addEventListener('resize',()=>{
+      c.width=innerWidth;c.height=innerHeight-50;
+    });
+  </script>
+  <script>
+    if('serviceWorker' in navigator)
+      navigator.serviceWorker.register('sw.js');
+  </script>
 </body>
 </html>
