--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       background-color:#F5F5F5;
       display:flex;
       align-items:center;
+      overflow:clip;
       justify-content:center;
     }
     #brush-size{
