--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <style>
+    body{
+    overflow: hidden;
+    }
     canvas{width:100vw;height:calc(100vh - 50px);}
     #panel{
       position:absolute;
@@ -13,7 +16,6 @@
       background-color:#F5F5F5;
       display:flex;
       align-items:center;
-      overflow:clip;
       justify-content:center;
     }
     #brush-size{
