--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
       ctx.lineCap = 'round';
       ctx.lineJoin = 'round';
       ctx.beginPath();
+      ctx.arc(x,y-50,size,0,2*Math.PI);
+      ctx.fill();
+    },false);
+    c.addEventListener("mousemove",function(e){
+      var x=e.clientX,y=e.clientY;
+      ctx.fillStyle=color;
+      ctx.beginPath();
+      ctx.arc(x,y-50,size,0,2*Math.PI);
+      ctx.fill();
+    },false);
+    window.addEventListener('resize',()=>{
+      c.width=innerWidth;c.height=innerHeight-50;
+    });
   </script>
   <script>
     if('serviceWorker' in navigator)
