--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html manifest="manifest.json">
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Draw App</title>
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="icon.png">
   <style>
     body{
     overflow:hidden;
