--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <div id="panel">
     <input type="range" min="2" max="30" value="10" class="slider" id="brush-size">
     <input type="color" id="brush-color" value="#000000">
+    <button id="clear-btn">Clear</button>
   </div>
   <canvas id="canvas"></canvas>
   <script>
@@ -89,6 +90,9 @@
     },false);
     window.addEventListener('resize',()=>{
       c.width=innerWidth;c.height=innerHeight-50;
+    });
+    document.getElementById("clear-btn").addEventListener("click", function(){
+    ctx.clearRect(0, 0, c.width, c.height);
     });
   </script>
   <script>
