--- a/index.html
+++ b/index.html
@@ -7,38 +7,41 @@
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="icon.png">
   <style>
-    body{
-    overflow:hidden;
+    body {
+      overflow: hidden;
     }
-    canvas{width:100vw;height:calc(100vh - 50px);}
-    #panel{
-      position:absolute;
-      top:0;
-      left:0;
-      width:100%;
-      height:50px;
-      background-color:#F5F5F5;
-      display:flex;
-      align-items:center;
-      justify-content:center;
+    canvas {
+      width: 100vw;
+      height: calc(100vh - 50px);
     }
-    #brush-size{
+    #panel {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 50px;
+      background-color: #F5F5F5;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    #brush-size {
       width: 100px;
     }
-    #brush-size::-webkit-slider-thumb{
+    #brush-size::-webkit-slider-thumb {
       -webkit-appearance: none;
-      width:20px;
-      height:20px;
+      width: 20px;
+      height: 20px;
       border-radius: 50%;
       background: #333;
     }
-    #brush-size::-moz-range-thumb{
-      width:20px;
-      height:20px;
+    #brush-size::-moz-range-thumb {
+      width: 20px;
+      height: 20px;
       border-radius: 50%;
       background: #333;
     }
-    #brush-color{
+    #brush-color {
       width: 50px;
       height: 20px;
       padding: 5px;
@@ -53,11 +56,31 @@
   </div>
   <canvas id="canvas"></canvas>
   <script>
+    var canvas = document.getElementById("canvas");
+    var ctx = canvas.getContext("2d");
     var isDrawing = false;
-    c.addEventListener("touchstart", function(e){
-  isDrawing = true;
-  lastX = e.targetTouches[0].pageX;
-  lastY = e.targetTouches[0].pageY - 50;
+    var size = 10;
+    var color = 'black';
+    var lastX;
+    var lastY;
+
+    canvas.width = innerWidth;
+    canvas.height = innerHeight - 50;
+
+    document.getElementById("brush-size").addEventListener("change", function(e){
+        size = e.target.value;
+    });
+    document.getElementById("brush-color").addEventListener("change", function(e){
+        color = e.target.value;
+    });
+    document.getElementById("clear-btn").addEventListener("click", function(e){
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+    });
+
+    canvas.addEventListener("touchstart", function(e){
+        isDrawing = true;
+        lastX = e.targetTouches[0].pageX;
+        lastY = e.targetTouches[0].pageY - 50;
 });
 c.addEventListener("touchend", function(e){
   isDrawing = false;
@@ -113,8 +136,6 @@ c.addEventListener("mouseup", function(e){
     c.width=innerWidth;c.height=innerHeight-50;
   });
   isDrawing = false;
-});
-
   </script>
   <script>
     if('serviceWorker' in navigator)
