--- a/index.html
+++ b/index.html
@@ -1,145 +1,65 @@
 <!DOCTYPE html>
-<html manifest="manifest.json">
+<html>
 <head>
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Draw App</title>
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" type="image/png" href="icon.png">
-  <style>
-    body {
-      overflow: hidden;
-    }
-    canvas {
-      width: 100vw;
-      height: calc(100vh - 50px);
-    }
-    #panel {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 50px;
-      background-color: #F5F5F5;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    #brush-size {
-      width: 100px;
-    }
-    #brush-size::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background: #333;
-    }
-    #brush-size::-moz-range-thumb {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background: #333;
-    }
-    #brush-color {
-      width: 50px;
-      height: 20px;
-      padding: 5px;
-    }
-  </style>
+    <script src="qcode-decoder.js"></script>
+    <style>
+        #output {
+            min-height: 200px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-  <div id="panel">
-    <input type="range" min="2" max="30" value="10" class="slider" id="brush-size">
-    <input type="color" id="brush-color" value="#000000">
-    <button id="clear-btn">Clear</button>
-  </div>
-  <canvas id="canvas"></canvas>
-  <script>
-    var canvas = document.getElementById("canvas");
-    var ctx = canvas.getContext("2d");
-    var isDrawing = false;
-    var size = 10;
-    var color = 'black';
-    var lastX;
-    var lastY;
+    <video id="camera" width="300" height="200" style="display:none;"></video>
+    <button id="uploadButton" style="display:none;">Upload QR Code Image</button>
+    <input type="file" id="fileInput" accept="image/*" style="display:none;"/>
+    <div id="output"></div>
+    
+    <script>
+        var video = document.getElementById('camera');
+        var canvas = document.createElement('canvas');
+        var context = canvas.getContext('2d');
+        var qr = new QCodeDecoder();
+        var output = document.getElementById('output');
+        var fileInput = document.getElementById('fileInput');
+        var uploadButton = document.getElementById('uploadButton');
 
-    canvas.width = innerWidth;
-    canvas.height = innerHeight - 50;
+        if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+            navigator.mediaDevices.getUserMedia({ video: true }).then(function(stream) {
+                video.srcObject = stream;
+                video.play();
+            });
+            video.style.display = 'block';
+        } else {
+            uploadButton.style.display = 'block';
+        }
 
-    document.getElementById("brush-size").addEventListener("change", function(e){
-        size = e.target.value;
-    });
-    document.getElementById("brush-color").addEventListener("change", function(e){
-        color = e.target.value;
-    });
-    document.getElementById("clear-btn").addEventListener("click", function(e){
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-    });
+        uploadButton.onclick = function() {
+            fileInput.click();
+        }
 
-    canvas.addEventListener("touchstart", function(e){
-        isDrawing = true;
-        lastX = e.targetTouches[0].pageX;
-        lastY = e.targetTouches[0].pageY - 50;
-});
-c.addEventListener("touchend", function(e){
-  isDrawing = false;
-});
+        fileInput.onchange = function() {
+            var reader = new FileReader();
+            reader.onload = function() {
+                qr.decodeFromImage(reader.result, function(err, result) {
+                    if (err) {
+                        output.innerHTML = 'Error: Not a valid HTML QR Code';
+                    } else {
+                        output.innerHTML = result;
+                    }
+                });
+            }
+            reader.readAsDataURL(fileInput.files[0]);
+        }
 
-c.addEventListener("mousedown", function(e){
-  isDrawing = true;
-  lastX = e.clientX;
-  lastY = e.clientY - 50;
-});
-c.addEventListener("mouseup", function(e){
-  isDrawing = false;
-});
-    var c=document.getElementById("canvas"),ctx=c.getContext("2d"),size=10,color='black',lastX,lastY;
-    c.width=innerWidth;c.height=innerHeight-50;
-    document.getElementById("brush-size").addEventListener("change", function(e){size=e.target.value;});
-      document.getElementById("brush-color").addEventListener("change", function(e){color=e.target.value;});
-  document.getElementById("clear-btn").addEventListener("click", function(e){
-    ctx.clearRect(0, 0, c.width, c.height);
-  });
-  c.addEventListener("touchmove", function(e){
-    e.preventDefault();
-    if (isDrawing) {
-      var x=e.targetTouches[0].pageX,y=e.targetTouches[0].pageY;
-      ctx.strokeStyle=color;
-      ctx.lineWidth = size;
-      ctx.lineCap = 'round';
-      ctx.lineJoin = 'round';
-      ctx.beginPath();
-      ctx.moveTo(lastX, lastY);
-      ctx.lineTo(x, y-50);
-      ctx.stroke();
-      lastX = x;
-      lastY = y-50;
-    }
-  },false);
-  c.addEventListener("mousemove", function(e){
-    if (isDrawing) {
-      var x=e.clientX,y=e.clientY;
-      ctx.strokeStyle=color;
-      ctx.lineWidth = size;
-      ctx.lineCap = 'round';
-      ctx.lineJoin = 'round';
-      ctx.beginPath();
-      ctx.moveTo(lastX, lastY);
-      ctx.lineTo(x, y-50);
-      ctx.stroke();
-      lastX = x;
-      lastY = y-50;
-    }
-  },false);
-  window.addEventListener('resize',()=>{
-    c.width=innerWidth;c.height=innerHeight-50;
-  });
-  isDrawing = false;
-  </script>
-  <script>
-    if('serviceWorker' in navigator)
-      navigator.serviceWorker.register('sw.js');
-  </script>
+        qr.decodeFromCamera(video, function(err, result) {
+            if (err) {
+                output.innerHTML = 'Error: Not a valid HTML QR Code';
+            } else {
+                output.innerHTML = result;
+                video.pause();
+            }
+        });
+    </script>
 </body>
 </html>
