--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
             min-height: 200px;
             border: 1px solid black;
         }
+        #camera {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            z-index: 1;
+        }
+        #output, #uploadButton {
+            position: relative;
+            z-index: 2;
+        }
     </style>
 </head>
 <body>
-    <video id="camera" width="300" height="200" style="display:none;"></video>
+    <video id="camera" autoplay playsinline style="display:none;"></video>
     <button id="uploadButton" style="display:none;">Upload QR Code Image</button>
     <input type="file" id="fileInput" accept="image/*" style="display:none;"/>
     <div id="output"></div>
@@ -27,9 +40,10 @@
         if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
             navigator.mediaDevices.getUserMedia({ video: true }).then(function(stream) {
                 video.srcObject = stream;
-                video.play();
+                video.style.display = 'block';
+            }).catch(function() {
+                uploadButton.style.display = 'block';
             });
-            video.style.display = 'block';
         } else {
             uploadButton.style.display = 'block';
         }
